kubernetes/apps/default/echo/app/tailscale-service-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: default
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "echo"
spec: {}
